# FastHTMLTemplate

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: app.py
app/components/: __init__.py  head_component.py  hello_world.py  image_gallery.py  navbar.py  search_bar.py
app/public/: styles.css
docker/: app.Dockerfile  dev.Dockerfile
package_name/: main.py  utils.py
